# ktv

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/specs/: 2026-05-01-audio-mix-slider-design.md
src/ktv/: config.py  main.py
src/ktv/api/: library.py  lyrics.py  offset.py  process.py  selection.py  video.py
src/ktv/core/: db.py  downloader.py  lyrics_client.py  separator.py
src/ktv/static/: index.html  player.html
src/ktv/static/css/: style.css
src/ktv/static/js/: app.js  audio_mix.js  library_state.js  lrc.js  player.js
tests/: audio_mix.test.mjs  library_state.test.mjs  player_lyrics_scroll.test.mjs  player_responsive.test.mjs  test_audio_api_routes.py  test_db_path.py  test_docker_compose_volumes.py  test_pending_library.py  test_process_background.py  test_vocals_cache.py
