[project]
name = "ktv"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "yt-dlp>=2025.1",
    "demucs>=4.0",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.2",
    "torch>=2.0",
    "torchaudio>=2.0",
    "soundfile>=0.12",
    "torchcodec>=0.11.1",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ktv"]

[tool.uv]
dev-dependencies = []
